@@ -1,3 +1,8 @@
+
+Wed Oct 6 12:37:54 CEST 2004 Paolo Molaro <lupus@ximian.com>
+
+	* String.cs: make GetHashCode() managed.
+
 2004-10-04  Zoltan Varga  <vargaz@freemail.hu>
 
 	* AppDomain.cs: Make ThreadStatic variables static. Fixes #56614.
